current:
Ryan C. Gordon - Fri Jan  2 22:50:11 EST 2004
 * Added some sanity checks.
Ryan C. Gordon - Fri Jan  2 22:18:41 EST 2004
 * Removed "Patches" file...it was screwing up my greps too much.
Ryan C. Gordon - Fri Jan  2 22:16:47 EST 2004
 * SMPEG builds on Cygwin again.
Ryan C. Gordon - Wed Dec 31 00:07:51 EST 2003
 * Check for SDL_CreateYUVOverlay() failure (happens for OpenGL surfaces).
Ryan C. Gordon - Tue Dec 30 23:37:07 EST 2003
 * Check that SDL_BYTEORDER is sane (it wasn't, for SDL 1.2.5 on Linux/amd64).
Ryan C. Gordon - Fri Feb 14 21:02:00 EST 2003
 * Memory leak fix that I missed from before (thanks, Pete Shinners).
Ryan C. Gordon - Sat Jan 25 19:20:58 EST 2003
 * Memory leak fixes from NUNOKAWA Masato and Robert Diel.
Ryan C. Gordon - Wed Dec 18 16:47:52 EST 2002
 * Apple Project Builder support by Eric Wing.
Ryan C. Gordon - Fri Dec  6 14:32:29 EST 2002
 * Fixed for newer automakes.
Ryan C. Gordon - Wed Dec  4 18:00:33 EST 2002
 * Now builds again when --enable-mmx is specified at configure time.
Ryan C. Gordon - Thu Sep 26 01:13:58 EDT 2002
 * Minor Makefile.am patch for GCC 3.2
Ryan C. Gordon - Tue Jul  9 22:28:21 EDT 2002
 * Removed #include <unistd.h> from glmovie.c
Ryan C. Gordon - Sun Jun 02 20:10:42 EST 2002
 * ./autogen.sh accepts aclocal commandlines via the ACLOCAL_FLAGS envr var.
Ryan C. Gordon - Sun Jun 02 20:10:42 EST 2002
 * ./autogen.sh is now flagged as executable in CVS.
Ryan C. Gordon - Sun Jun 02 20:10:42 EST 2002
 * ./configure.in tweaked to not complain with newer autoconf.
Ryan C. Gordon - Sun Jun 02 20:10:42 EST 2002
 * Newer ltconfig and hacks for libtool and .S files.
Adam Procter - Sat Jun  8 05:41:30 EDT 2002
 * Fixed potential deadlock in MPEGaudio.cpp
Sam Lantinga - Sun Jun  9 00:24:10 EDT 2002
 * Fix for crash when an MPEG file can't be opened.

0.4.5:
Sam Lantinga - Tue Jul 17 12:27:20 PDT 2001
 * Skip MPEG audio frames with wildly varying frequencies

0.4.4:
Laurent Alacoque - Mon, 18 Jun 2001 15:51:51