@@ -1,4 +1,7 @@
 current:
+Steven Fuller - Mon Feb  9 23:26:08 CST 2004
+ * Added a --enable-video-callback-thread configure flag to disable thread 
+   usage in smpeg.
 Ryan C. Gordon - Fri Jan  2 22:50:11 EST 2004
  * Added some sanity checks.
 Ryan C. Gordon - Fri Jan  2 22:18:41 EST 2004
